tests/tooling/fixtures/native/recovery/negative/negative_return_parser_missing_semicolon.objc3
// Expected diagnostic code(s): O3P104.
module NegativeReturnParserMissingSemicolon;

fn helper() -> void {
  return 1
}

fn main() -> i32 {
  helper();
  return 0;
}
